match email colors with frontend, clean up mail utils

--- a/templates/includes/base.html
+++ b/templates/includes/base.html
@@ -68,12 +68,14 @@
       ------------------------------------- */
       .message {
         background: #f6f6f6;
-        border-radius: 3px;
+        border-radius: 7px;
         width: 100%;
         margin-bottom: 20px;
+        margin-left: 5px;
+        margin-right: 5px;
       }
       .message.blue {
-        background: #d5f1ff;
+        background: #e3faf6;
       }
       .wrapper {
         box-sizing: border-box;
@@ -343,9 +345,13 @@
               >
                 <tr>
                   <td class="content-block">
-                    <span class="apple-link">
-                      Convo Inc.
-                    </span>
+                    <p>
+                      This email is a <a href="https://hiconvo.com">Convo</a>.
+                      You can reply to this email as you would any other. You
+                      can also
+                      <a href="https://app.hiconvo.com">create an account</a> to
+                      create Convos and Events of your own.
+                    </p>
                   </td>
                 </tr>
               </table>
