--- a/templates/includes/message.html
+++ b/templates/includes/message.html
@@ -10,38 +10,12 @@
           <tr>
             <td>
               <!-- START PROFILE -->
-              <table
-                role="presentation"
-                border="0"
-                cellpadding="0"
-                cellspacing="0"
-                class="profile"
-              >
-                <tbody>
-                  <tr>
-                    <td align="left">
-                      <table
-                        role="presentation"
-                        border="0"
-                        cellpadding="0"
-                        cellspacing="0"
-                      >
-                        <tbody>
-                          <tr>
-                            <td>
-                              <strong>{{ .Name }}</strong>
-                            </td>
-                          </tr>
-                        </tbody>
-                      </table>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-
+              {{ template "profile" .}}
               <!-- END PROFILE -->
 
+              <!-- START BODY -->
               {{ .Body }}
+              <!-- END BODY -->
             </td>
           </tr>
         </table>
