--- a/templates/includes/profile.html
+++ b/templates/includes/profile.html
@@ -13,7 +13,7 @@
           <tbody>
             <tr>
               <td>
-                {{ .Name }}
+                <strong>{{ .Name }}</strong>
               </td>
             </tr>
           </tbody>
