get magic rsvp working

--- a/templates/includes/base.html
+++ b/templates/includes/base.html
@@ -188,8 +188,8 @@
         background-color: #3498db;
       }
       .btn-primary a {
-        background-color: #3498db;
-        border-color: #3498db;
+        background-color: #006556;
+        border-color: #006556;
         color: #ffffff;
       }
       /* -------------------------------------
