--- a/templates/layouts/event.html
+++ b/templates/layouts/event.html
@@ -36,4 +36,18 @@
   <!-- END MESSAGE CONTENT AREA -->
 </table>
 
+<!-- START FOOTER -->
+<div class="footer">
+  <table role="presentation" border="0" cellpadding="0" cellspacing="0">
+    <tr>
+      <td class="content-block">
+        <p>
+          <a href="https://app.hiconvo.com">Login to Convo</a>
+        </p>
+      </td>
+    </tr>
+  </table>
+</div>
+<!-- END FOOTER -->
+
 {{ end }}
