--- a/templates/layouts/thread.html
+++ b/templates/layouts/thread.html
@@ -1,4 +1,21 @@
 {{ define "title" }}
 <title>{{ .Subject }}</title>
 {{ end }} {{ define "content" }} {{ range .Messages }} {{ template "message" .}}
-{{ end }} {{ end }}
+{{ end }}
+
+<!-- START FOOTER -->
+<div class="footer">
+  <table role="presentation" border="0" cellpadding="0" cellspacing="0">
+    <tr>
+      <td class="content-block">
+        <p>
+          This email is a <a href="https://app.hiconvo.com">Convo</a>. You can
+          reply to this email as you would any other.
+        </p>
+      </td>
+    </tr>
+  </table>
+</div>
+<!-- END FOOTER -->
+
+{{ end }}
