--- a/templates/includes/button.html
+++ b/templates/includes/button.html
@@ -8,7 +8,7 @@
 >
   <tbody>
     <tr>
-      <td align="left">
+      <td align="center">
         <table role="presentation" border="0" cellpadding="0" cellspacing="0">
           <tbody>
             <tr>
