--- a/templates/layouts/thread.html
+++ b/templates/layouts/thread.html
@@ -1,21 +1,19 @@
+<!-- START TITLE DEF -->
 {{ define "title" }}
 <title>{{ .Subject }}</title>
-{{ end }} {{ define "content" }} {{ range .Messages }} {{ template "message" .}}
 {{ end }}
+<!-- END TITLE DEF -->
 
-<!-- START FOOTER -->
-<div class="footer">
-  <table role="presentation" border="0" cellpadding="0" cellspacing="0">
-    <tr>
-      <td class="content-block">
-        <p>
-          This email is a <a href="https://app.hiconvo.com">Convo</a>. You can
-          reply to this email as you would any other.
-        </p>
-      </td>
-    </tr>
-  </table>
-</div>
-<!-- END FOOTER -->
-
+<!-- START CONTENT DEF -->
+{{ define "content" }} {{ range .Messages }} {{ template "message" .}} {{ end }}
 {{ end }}
+<!-- END CONTENT DEF -->
+
+<!-- START FOOTER DEF -->
+{{ define "footer" }}
+<p>
+  This email is a <a href="https://app.hiconvo.com">Convo</a>. You can reply to
+  this email as you would any other.
+</p>
+{{ end }}
+<!-- END FOOTER DEF -->
