--- a/templates/layouts/digest.html
+++ b/templates/layouts/digest.html
@@ -7,10 +7,24 @@
 <!-- START CONTENT DEF -->
 {{ define "content" }}
 <h2>Convo Digest</h2>
-<p>You have unread messages in the following convos and events.</p>
+<p class="mb30">
+  You have unread messages among the following events.
+  <a href="https://app.hiconvo.com">Login to Convo</a> to respond.
+</p>
 {{ range .Items }}
-<h3>{{ .Subject }}</h3>
-{{ range .Messages }} {{ template "message" .}} {{ end }} {{ end }} {{ end }}
+<div class="digest-item mb30">
+  <table role="presentation" border="0" cellpadding="0" cellspacing="0">
+    <tbody>
+      <tr>
+        <td align="left">
+          <h3>{{ .Subject }}</h3>
+          {{ range .Messages }} {{ template "message" .}} {{ end }} {{ end }}
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+{{ end }}
 <!-- END CONTENT DEF -->
 
 <!-- START FOOTER DEF -->
