add upcoming events to digest, do not send invitations to host

--- a/templates/layouts/digest.html
+++ b/templates/layouts/digest.html
@@ -1,36 +1,84 @@
 <!-- START TITLE DEF -->
 {{ define "title" }}
-<title>Convo Digest</title>
+  <title>Convo Digest</title>
 {{ end }}
 <!-- END TITLE DEF -->
 
 <!-- START CONTENT DEF -->
 {{ define "content" }}
-<h2>Convo Digest</h2>
-<p class="mb30">
-  You have unread messages among the following events.
-  <a href="https://app.hiconvo.com">Login to Convo</a> to respond.
-</p>
-{{ range .Items }}
-<div class="digest-item mb30">
-  <table role="presentation" border="0" cellpadding="0" cellspacing="0">
-    <tbody>
-      <tr>
-        <td align="left">
-          <h3>{{ .Subject }}</h3>
-          {{ range .Messages }} {{ template "message" .}} {{ end }} {{ end }}
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+  <h1>Convo Digest</h1>
+  <p class="mb30">
+    {{ if and .Events .Items }}
+      You have unread messages and upcoming events on Convo.
+    {{ else }}
+      {{ if .Events }}
+        You have upcoming events on Convo.
+      {{ else }}
+        You have unread messages on Convo.
+      {{ end }}
+    {{ end }}
+    <a href="https://app.hiconvo.com">Login to Convo</a> to respond.
+  </p>
+
+  <!-- START UPCOMING EVENTS -->
+  {{ if .Events }}
+    <h2>Upcoming Events</h2>
+
+    {{ range .Events }}
+      <table role="presentation" class="message">
+        <tr>
+          <td class="wrapper">
+            <table role="presentation" border="0" cellpadding="0" cellspacing="0">
+              <tr>
+                <td>
+                  <p>
+                    <strong>{{ .Name }}</strong>
+                    <br />
+                    <span>{{ .Time }}</span>
+                    <br />
+                    <span>{{ .Address }}</span>
+                  </p>
+                </td>
+              </tr>
+            </table>
+          </td>
+        </tr>
+      </table>
+    {{ end }}
+  {{ else }}
+  {{ end }}
+  <!-- END UPCOMING EVENTS -->
+
+  <!-- START UNREAD MESSAGES -->
+  {{ if .Items }}
+    <h2>Unread Messages</h2>
+
+    {{ range .Items }}
+      <div class="digest-item">
+        <table role="presentation" border="0" cellpadding="0" cellspacing="0">
+          <tbody>
+            <tr>
+              <td align="left">
+                <h3>{{ .Subject }}</h3>
+                {{ range .Messages }}
+                  {{ template "message" .}}
+                {{ end }}
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    {{ end }}
+  {{ else }}
+  {{ end }}
+  <!-- END UNREAD MESSAGES -->
 {{ end }}
 <!-- END CONTENT DEF -->
 
 <!-- START FOOTER DEF -->
 {{ define "footer" }}
-<p>
-  <a href="https://app.hiconvo.com">Login to Convo</a>
-</p>
+  <p>
+    <a href="https://app.hiconvo.com">Login to Convo</a>
+  </p>
 {{ end }}
 <!-- END FOOTER DEF -->
