--- a/templates/layouts/event.html
+++ b/templates/layouts/event.html
@@ -24,7 +24,7 @@
 
               {{ template "button" .}}
 
-              {{ .Description }}
+              {{ .RenderedBody }}
             </td>
           </tr>
         </table>
