clean up admin emails

--- a/templates/includes/button.html
+++ b/templates/includes/button.html
@@ -14,7 +14,7 @@
             <tr>
               <td>
                 <a href="{{ .MagicLink }}" target="_blank">
-                  RSVP
+                  {{ .ButtonText }}
                 </a>
               </td>
             </tr>
