improve invitation email styling

--- a/templates/includes/base.html
+++ b/templates/includes/base.html
@@ -71,8 +71,6 @@
         border-radius: 7px;
         width: 100%;
         margin-bottom: 20px;
-        margin-left: 5px;
-        margin-right: 5px;
       }
       .message.blue {
         background: #e3faf6;
@@ -265,7 +263,7 @@
           padding: 10px !important;
         }
         table[class="body"] .content {
-          padding: 0 !important;
+          padding: 10px !important;
         }
         table[class="body"] .container {
           padding: 0 !important;
