--- a/templates/layouts/cancellation.html
+++ b/templates/layouts/cancellation.html
@@ -6,7 +6,7 @@
 
 <!-- START CONTENT DEF -->
 {{ define "content" }}
-  <table role="presentation" class="message">
+  <table role="presentation">
     <tr>
       <td class="wrapper">
         <table role="presentation" border="0" cellpadding="0" cellspacing="0">
@@ -14,6 +14,19 @@
             <td>
               <p>Hello,</p>
               <p>The following event has been <strong>cancelled</strong>:</p>
+            </td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+  </table>
+
+  <table role="presentation" class="message">
+    <tr>
+      <td class="wrapper">
+        <table role="presentation" border="0" cellpadding="0" cellspacing="0">
+          <tr>
+            <td>
               <p>
                 <strong>{{ .Name }}</strong>
                 <br />
@@ -27,6 +40,21 @@
       </td>
     </tr>
   </table>
+
+  <table role="presentation">
+    <tr>
+      <td class="wrapper">
+        <table role="presentation" border="0" cellpadding="0" cellspacing="0">
+          <tr>
+            <td>
+              <p>Thanks,<br />Convo Support</p>
+            </td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+  </table>
+
 {{ end }}
 <!-- END CONTENT DEF -->
 
