--- a/templates/layouts/event.html
+++ b/templates/layouts/event.html
@@ -6,7 +6,7 @@
 
 <!-- START CONTENT DEF -->
 {{ define "content" }}
-  <table role="presentation" class="message">
+  <table role="presentation">
     <tr>
       <td class="wrapper">
         <table role="presentation" border="0" cellpadding="0" cellspacing="0">
@@ -14,6 +14,19 @@
             <td>
               <p>Hello,</p>
               <p>{{ .FromName }} has invited you to the following event:</p>
+            </td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+  </table>
+
+  <table role="presentation" class="message">
+    <tr>
+      <td class="wrapper">
+        <table role="presentation" border="0" cellpadding="0" cellspacing="0">
+          <tr>
+            <td>
               <p>
                 <strong>{{ .Name }}</strong>
                 <br />
@@ -23,7 +36,19 @@
               </p>
 
               {{ template "button" .}}
+            </td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+  </table>
 
+  <table role="presentation">
+    <tr>
+      <td class="wrapper">
+        <table role="presentation" border="0" cellpadding="0" cellspacing="0">
+          <tr>
+            <td>
               {{ .RenderedBody }}
             </td>
           </tr>
