add instructions to rsvp email

--- a/templates/layouts/event.html
+++ b/templates/layouts/event.html
@@ -13,7 +13,7 @@
           <tr>
             <td>
               <p>Hello,</p>
-              <p>{{ .FromName }} has invited you to the following event:</p>
+              <p>{{ .FromName }} has invited you to the following event. Click the button below to RSVP.</p>
             </td>
           </tr>
         </table>
