--- a/templates/layouts/cancellation.html
+++ b/templates/layouts/cancellation.html
@@ -1,67 +1,67 @@
 <!-- START TITLE DEF -->
 {{ define "title" }}
-  <title>Cancelled: {{ .Name }}</title>
+<title>Cancelled: {{ .Name }}</title>
 {{ end }}
 <!-- END TITLE DEF -->
 
 <!-- START CONTENT DEF -->
 {{ define "content" }}
-  <table role="presentation">
-    <tr>
-      <td class="wrapper">
-        <table role="presentation" border="0" cellpadding="0" cellspacing="0">
-          <tr>
-            <td>
-              <p>Hello,</p>
-              <p>The following event has been <strong>cancelled</strong>:</p>
-            </td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-  </table>
+<table role="presentation">
+  <tr>
+    <td class="wrapper">
+      <table role="presentation" border="0" cellpadding="0" cellspacing="0">
+        <tr>
+          <td>
+            <p>Hello,</p>
+            <p>The following event has been <strong>cancelled</strong>:</p>
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>
 
-  <table role="presentation" class="message">
-    <tr>
-      <td class="wrapper">
-        <table role="presentation" border="0" cellpadding="0" cellspacing="0">
-          <tr>
-            <td>
-              <p>
-                <strong>{{ .Name }}</strong>
-                <br />
-                <span>{{ .Time }}</span>
-                <br />
-                <span>{{ .Address }}</span>
-              </p>
-            </td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-  </table>
+<table role="presentation" class="message">
+  <tr>
+    <td class="wrapper">
+      <table role="presentation" border="0" cellpadding="0" cellspacing="0">
+        <tr>
+          <td>
+            <p>
+              <strong>{{ .Name }}</strong>
+              <br />
+              <span>{{ .Time }}</span>
+              <br />
+              <span>{{ .Address }}</span>
+            </p>
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>
 
-  <table role="presentation">
-    <tr>
-      <td class="wrapper">
-        <table role="presentation" border="0" cellpadding="0" cellspacing="0">
-          <tr>
-            <td>
-              <p>Thanks,<br />Convo Support</p>
-            </td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-  </table>
+<table role="presentation">
+  <tr>
+    <td class="wrapper">
+      <table role="presentation" border="0" cellpadding="0" cellspacing="0">
+        <tr>
+          <td>
+            {{ .RenderedBody }}
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>
 
 {{ end }}
 <!-- END CONTENT DEF -->
 
 <!-- START FOOTER DEF -->
 {{ define "footer" }}
-  <p>
-    <a href="https://app.hiconvo.com">Login to Convo</a>
-  </p>
+<p>
+  <a href="https://app.hiconvo.com">Login to Convo</a>
+</p>
 {{ end }}
 <!-- END FOOTER DEF -->
