update thread email notif behavior, comment out delete photo endpoint

--- a/templates/includes/message.html
+++ b/templates/includes/message.html
@@ -25,6 +25,12 @@
                 <i>[This message contains a photo. <a href="https://app.hiconvo.com">Login to Convo</a> to view it.]</i>
               </p>
               {{- end}}
+
+              {{if .HasLink}}
+              <p>
+                <i>[This message contains a link. <a href="https://app.hiconvo.com">Login to Convo</a> to view it.]</i>
+              </p>
+              {{- end}}
             </td>
           </tr>
         </table>
