--- a/templates/layouts/cancellation.html
+++ b/templates/layouts/cancellation.html
@@ -61,7 +61,7 @@
 <!-- START FOOTER DEF -->
 {{ define "footer" }}
 <p>
-  <a href="https://app.hiconvo.com">Login to Convo</a>
+  <a href="https://app.convo.events">Login to Convo</a>
 </p>
 {{ end }}
 <!-- END FOOTER DEF -->
