--- a/templates/layouts/admin.html
+++ b/templates/layouts/admin.html
@@ -1,37 +1,36 @@
 <!-- START TITLE DEF -->
 {{ define "title" }}
-  <title>Action required on Convo</title>
+<title>Action required on Convo</title>
 {{ end }}
 <!-- END TITLE DEF -->
 
 <!-- START CONTENT DEF -->
 {{ define "content" }}
-  <table role="presentation">
-    <tr>
-      <td class="wrapper">
-        <table role="presentation" border="0" cellpadding="0" cellspacing="0">
-          <tr>
-            <td>
-              <p>Hello,</p>
+<table role="presentation">
+  <tr>
+    <td class="wrapper">
+      <table role="presentation" border="0" cellpadding="0" cellspacing="0">
+        <tr>
+          <td>
+            <p>Hello,</p>
 
-              {{ .RenderedBody }}
+            {{ .RenderedBody }} {{ template "button" .}}
 
-              {{ template "button" .}}
+            <p>Thanks,<br />Convo Support</p>
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>
 
-              <p>Thanks,<br />Convo Support</p>
-            </td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-  </table>
 {{ end }}
 <!-- END CONTENT DEF -->
 
 <!-- START FOOTER DEF -->
 {{ define "footer" }}
-  <p>
-    <a href="https://app.hiconvo.com">Login to Convo</a>
-  </p>
+<p>
+  <a href="https://app.convo.events">Login to Convo</a>
+</p>
 {{ end }}
 <!-- END FOOTER DEF -->
