--- a/templates/layouts/thread.html
+++ b/templates/layouts/thread.html
@@ -8,7 +8,7 @@
 {{ define "content" }}
   <p>Hello,</p>
   <p class="mb30">
-    {{ .FromName }} shared something with you on Convo. <a href="https://app.hiconvo.com">Login to Convo</a> to respond.
+    {{ .FromName }} shared something with you on Convo. <a href="https://app.convo.events">Login to Convo</a> to respond.
   </p>
 
   {{ range .Messages }}
@@ -20,7 +20,7 @@
 <!-- START FOOTER DEF -->
 {{ define "footer" }}
   <p>
-    This email is a <a href="https://app.hiconvo.com">Convo</a>. You can reply to
+    This email is a <a href="https://app.convo.events">Convo</a>. You can reply to
     this email as you would any other.
   </p>
 {{ end }}
