--- a/templates/layouts/thread.html
+++ b/templates/layouts/thread.html
@@ -8,7 +8,7 @@
 {{ define "content" }}
   <p>Hello,</p>
   <p class="mb30">
-    {{ .FromName }} shared something with you on Convo. <a href="https://app.convo.events">Login to Convo</a> to respond.
+    {{ .FromName }} shared something with you on Convo. <a href="{{ .MagicLink }}">Login to Convo</a> to respond.
   </p>
 
   {{ range .Messages }}
