add unsubscribe functionality

--- a/template/layouts/digest.html
+++ b/template/layouts/digest.html
@@ -79,7 +79,8 @@
 <!-- START FOOTER DEF -->
 {{ define "footer" }}
 <p>
-  <a href="{{ .MagicLink }}">Login to Convo</a>
+  <a href="{{ .MagicLink }}">Login to Convo</a>. 
+  <a href="{{ .UnsubscribeMagicLink }}">Unsubscribe</a>.
 </p>
 {{ end }}
 <!-- END FOOTER DEF -->
