--- a/template/layouts/cancellation.html
+++ b/template/layouts/cancellation.html
@@ -61,7 +61,8 @@
 <!-- START FOOTER DEF -->
 {{ define "footer" }}
 <p>
-  <a href="https://app.convo.events">Login to Convo</a>
+  <a href="https://app.convo.events">Login to Convo</a>. 
+  <a href="{{ .UnsubscribeMagicLink }}">Unsubscribe</a>.
 </p>
 {{ end }}
 <!-- END FOOTER DEF -->
