--- a/template/layouts/event.html
+++ b/template/layouts/event.html
@@ -1,68 +1,73 @@
 <!-- START TITLE DEF -->
 {{ define "title" }}
-  <title>{{ .Name }}</title>
+<title>{{ .Name }}</title>
 {{ end }}
 <!-- END TITLE DEF -->
 
 <!-- START CONTENT DEF -->
 {{ define "content" }}
-  <table role="presentation">
-    <tr>
-      <td class="wrapper">
-        <table role="presentation" border="0" cellpadding="0" cellspacing="0">
-          <tr>
-            <td>
-              <p>Hello,</p>
-              <p>{{ .FromName }} has invited you to the following event. Click the button below to RSVP or to send a message to the group.</p>
-            </td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-  </table>
+<table role="presentation">
+  <tr>
+    <td class="wrapper">
+      <table role="presentation" border="0" cellpadding="0" cellspacing="0">
+        <tr>
+          <td>
+            <p>Hello,</p>
+            <p>
+              {{ .FromName }} has invited you to the following event. Click the
+              button below to RSVP or to send a message to the group.
+            </p>
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>
 
-  <table role="presentation" class="message">
-    <tr>
-      <td class="wrapper">
-        <table role="presentation" border="0" cellpadding="0" cellspacing="0">
-          <tr>
-            <td>
-              <p>
-                <strong>{{ .Name }}</strong>
-                <br />
-                <span>{{ .Time }}</span>
-                <br />
-                <span>{{ .Address }}</span>
-              </p>
+<table role="presentation" class="message">
+  <tr>
+    <td class="wrapper">
+      <table role="presentation" border="0" cellpadding="0" cellspacing="0">
+        <tr>
+          <td>
+            <p>
+              <strong>{{ .Name }}</strong>
+              <br />
+              <span>{{ .Time }}</span>
+              <br />
+              <span>{{ .Address }}</span>
+            </p>
 
-              {{ template "button" .}}
-            </td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-  </table>
+            {{ template "button" .}}
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>
 
-  <table role="presentation">
-    <tr>
-      <td class="wrapper">
-        <table role="presentation" border="0" cellpadding="0" cellspacing="0">
-          <tr>
-            <td>
-              {{ .RenderedBody }}
-            </td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-  </table>
+<table role="presentation">
+  <tr>
+    <td class="wrapper">
+      <table role="presentation" border="0" cellpadding="0" cellspacing="0">
+        <tr>
+          <td>
+            {{ .RenderedBody }}
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>
+
 {{ end }}
 <!-- END CONTENT DEF -->
 
 <!-- START FOOTER DEF -->
 {{ define "footer" }}
-  <p>
-    <a href="https://app.convo.events">Login to Convo</a>
-  </p>
+<p>
+  <a href="https://app.convo.events">Login to Convo</a>.
+  <a href="{{ .UnsubscribeMagicLink }}">Unsubscribe</a>.
+</p>
 {{ end }}
 <!-- END FOOTER DEF -->
